2.1.0:
  - CMake-based build system and portability fixes restoring
     the ability to compile Mesquite on MS Windows.
  - Many new target metrics for volume elements
  - Target metric performance improvements
  - edge-length and area/volume metrics for use in quality assessment
  - QualityAssessor accumulates statistics for only free elements
     (elements with at least one free vertex) by default.  New
     option to revert to old behavior.
  - New command-line utilities: 
       msqshape :   run ShapeImprovementWrapper for a VTK file
       msqquality : run QualityAssessor with a few common metrics
                    for a VTK file and print results.
  - new wrappers:
       ViscousCFDTetShapeWrapper
       PaverMinEdgeLengthWrapper
  - experimental support for using iMeshP API with parallel mesquite
  
2.1.1:
  - Misc CMake build fixes
  - Support building of test suite with CMake (requires CppUnit)
  - Fix compilation error in simple_hybrid_test
  - Minor fixes to build with autotools
  - Remove unused code
  - Fix (benign) compilation warnings
  - Fix portability issues (particularly Windows)
  - Fix definition of macros that might be indirectly included by
     application and conflict with application code
  - Fix bug in NodeSet class with Microsoft compiler (only affects 
      experimental smoothing of higher-order elements)
  - Fix compilation of Mesquite unit tests with latest version of CppUnit
  - Fix bug in unit test: TMPQualityMetricTest
  - Fix bug in PaverMinEdgeLengthWrapper where user-specified termination
      criteria were not used.

2.1.2:
  - Fix tarball missing files for Windows/CMake build
  - Fix Windows DLL build issues (backport from main branch)
  - Export more symbols for Windows DLL
  
